--- a/RestaurantFormTest/App.config
+++ b/RestaurantFormTest/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <RestaurantFormTest.Properties.Settings>
             <setting name="Save_location" serializeAs="String">
-                <value>C:\</value>
+                <value />
             </setting>
             <setting name="Table_Prefix" serializeAs="String">
                 <value>Table_</value>
