--- a/RestaurantFormTest/Properties/Settings.settings
+++ b/RestaurantFormTest/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Save_location" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="Table_Prefix" Type="System.String" Scope="User">
       <Value Profile="(Default)">Table_</Value>
